@@ -18,6 +18,7 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
+t/data/example.txt
 t/Wikibase-Cache-Backend-Basic/01-use.t
 t/Wikibase-Cache-Backend-Basic/02-version.t
 t/Wikibase-Cache-Backend-Basic/03-new.t
