@@ -6,6 +6,7 @@ build_requires:
   English: 0
   Error::Pure::Utils: 0
   ExtUtils::MakeMaker: 6.59
+  File::Object: 0
   Test::More: 0
   Test::NoWarnings: 0
 configure_requires:
@@ -26,6 +27,7 @@ no_index:
     - xt
 requires:
   Class::Utils: 0.03
+  Data::Handle: 0
   Error::Pure: 0.15
   Text::DSV: 0
   Wikibase::Cache::Backend: 0.03
