@@ -2,6 +2,7 @@
  - Add documentation.
  - Add P854.
  - Add P580 and P582.
+ - Add parameter 'data_fh' for file handler with mapping.
  - Update Module::Install to 1.21 version.
 
 0.03 2023-04-15T18:41:40+02:00
